--- a/index.html
+++ b/index.html
@@ -7,18 +7,86 @@
     <title>GenMedia</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       body {
         font-family: 'Inter', sans-serif;
+        background-color: #040716;
+        position: relative;
       }
+      
+      .gradient-bg {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        overflow: hidden;
+        z-index: 0;
+      }
+
+      .gradient-ball {
+        position: absolute;
+        border-radius: 50%;
+        filter: blur(160px);
+        opacity: 0.35;
+        will-change: transform;
+      }
+
+      .ball-1 {
+        background: #60A5FA; /* blue-400 */
+        width: 450px;
+        height: 450px;
+        animation: move1 22s infinite alternate ease-in-out;
+      }
+
+      .ball-2 {
+        background: #A78BFA; /* violet-400 */
+        width: 550px;
+        height: 550px;
+        animation: move2 28s infinite alternate-reverse ease-in-out;
+      }
+      
+      .ball-3 {
+        background: #F472B6; /* pink-400 */
+        width: 400px;
+        height: 400px;
+        animation: move3 20s infinite alternate ease-in-out;
+      }
+
+      @keyframes move1 {
+        0% { transform: translate(-20%, -20%) scale(1) rotate(0deg); }
+        100% { transform: translate(20%, 20%) scale(1.2) rotate(30deg); }
+      }
+      @keyframes move2 {
+        0% { transform: translate(calc(100vw - 300px), calc(100vh - 300px)) scale(1); }
+        100% { transform: translate(50vw, -50vh) scale(0.8); }
+      }
+      @keyframes move3 {
+        0% { transform: translate(50vw, 100vh) scale(0.9); }
+        100% { transform: translate(-20vw, 30vh) scale(1.1); }
+      }
+
       @keyframes fadeIn {
         from { opacity: 0; transform: translateY(10px); }
         to { opacity: 1; transform: translateY(0); }
       }
       .animate-fade-in {
         animation: fadeIn 0.5s ease-out forwards;
+      }
+
+      /* Shimmer effect for skeleton loaders (kept for main app) */
+      @keyframes shimmer {
+        100% { transform: translateX(100%); }
+      }
+      .shimmer::before {
+        content: '';
+        position: absolute;
+        inset: 0;
+        transform: translateX(-100%);
+        background-image: linear-gradient(90deg, rgba(255,255,255,0) 0, rgba(255,255,255,0.05) 50%, rgba(255,255,255,0) 100%);
+        animation: shimmer 2s infinite;
       }
     </style>
   <script type="importmap">
@@ -32,8 +100,13 @@
 }
 </script>
 </head>
-  <body class="bg-slate-900 text-white selection:bg-sky-500 selection:text-white">
-    <div id="root"></div>
+  <body class="text-white selection:bg-sky-500 selection:text-white">
+    <div class="gradient-bg">
+      <div class="gradient-ball ball-1"></div>
+      <div class="gradient-ball ball-2"></div>
+      <div class="gradient-ball ball-3"></div>
+    </div>
+    <div id="root" class="relative z-10"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
